--- a/downloadManager/languages/en.json
+++ b/downloadManager/languages/en.json
@@ -3,5 +3,8 @@
     {
         "name": "DownloadManager 🚀",
         "description": "Easy Create file download based on shortcode"
-    }
+    },
+    "Text": "Text",
+    "error": "error",
+    "success": "success"
 }
