--- a/downloadManager/languages/pl.json
+++ b/downloadManager/languages/pl.json
@@ -1,1 +1,12 @@
-
+{
+    "plugin-data":
+    {
+        "name": "DownloadManager 🚀",
+        "description": "Easy Create file download based on shortcode"
+    },
+    "Text": "Text",
+    "error": "error",
+    "success": "success",
+    "illegalFiletype": "Nieakceptowany typ pliku.",
+    "descUpload": "Upload files to yours Download Manager"
+}
